test/libyul/yulSyntaxTests/invalid/unicode_string_direction_override.sol
{
    // pop 1
    let s := unicode"underflow â€¬";
}
// ----
// ParserError 1465: (35-47='"underflow â'): Illegal token: Invalid character in string.
